# Sem4PIAA

Lab5/: Lab5.sln
Lab5/Lab5/: CMakeLists.txt  KMP.cpp  KMP.h  Lab5.vcxproj  Lab5.vcxproj.filters.txt  Source.cpp  SourceShift.cpp  SourceTest.cpp  prefix.cpp  prefix.h
Lab5/Lab5/googletest-master/googletest/msvc/2010/gtest/Win32-Debug/temp/gtest/: gtest.idb
Lab5/Lab5/googletest-master/googletest/msvc/2010/gtest/Win32-Debug/temp/gtest/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  gtest.lastbuildstate
Lab5/Lab5/include/: KMP.h
Lab6/: Lab6.sln
Lab6/Lab6/: Aho.cpp  Bohr.cpp  Bohr.h  CMakeLists.txt  Lab6.vcxproj  Source.cpp
Lab6/Lab6/googletest-master/googletest/msvc/2010/: gtest_main.vcxproj
Lab6/Lab6/include/: Aho.h
Lab6/Lab6/source/: SourceTest.cpp
Tcyganov/OOPLab5/: OOPLab5.pro
Tcyganov/oop2/Geometr/: Geometry.vcxproj  Geometry.vcxproj.filters(1).txt  Geometry.vcxproj.filters.txt  vector.cpp  vector.h
